--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "lint": "eslint src/. test/. --config .eslintrc.json --fix",
     "dev": "nodemon src/",
     "start": "node src/",
-    "mocha": "mocha test/ --recursive --exit"
+    "mocha": "mocha test/ --recursive --exit",
+    "db-init": "docker run --name mysql-server -e MYSQL_ROOT_PASSWORD=password -d -p 3306:3306 mysql:latest",
+    "db-start": "docker start mysql-server",
+    "db-stop": "docker start mysql-server"
   },
   "standard": {
     "env": [
@@ -45,7 +48,12 @@
     "@feathersjs/transport-commons": "^4.5.11",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-knex": "^7.1.1",
+    "feathers-sequelize": "^6.2.0",
     "helmet": "^4.6.0",
+    "knex": "^0.95.4",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
